# Nudgly

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Directory.Build.props  Nudgly.slnx  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: audit.yml  ci.yml  coverage.yml  release.yml
Nudgly.Shared/: App.axaml  App.axaml.cs  Nudgly.Shared.csproj  ViewLocator.cs
Nudgly.Shared/Services/: ICaptureExclusionService.cs  IScreenCaptureService.cs
Nudgly.Shared/ViewModels/: MainWindowViewModel.cs  ViewModelBase.cs
Nudgly.Shared/Views/: MainWindow.axaml  MainWindow.axaml.cs
Nudgly.Windows/: NativeMethods.txt  Nudgly.Windows.csproj  Program.cs  app.manifest
Nudgly.Windows/Services/: WindowsCaptureExclusionService.cs  WindowsScreenCaptureService.cs
Nudgly.macOS/: Nudgly.macOS.csproj  Program.cs
Nudgly.macOS/Services/: MacOSCaptureExclusionService.cs  MacOSScreenCaptureService.cs  MacOsScreenCaptureService.cs
nudgly/: __main__.py  constants.py
nudgly/core/: config.py  constants.py  logger.py
nudgly/model/: ask_ai_model.py  conversation_model.py  todo_model.py
nudgly/models/: conversation_model.py
nudgly/services/: config.py  config_service.py  llm.py  llm_service.py  logger.py  logging_service.py  window_privacy.py  window_privacy_service.py
nudgly/utils/: config.py  constants.py  logger.py  window_privacy.py
nudgly/view/: answers_window.qml  main.qml  main_window.qml
nudgly/viewmodel/: main_viewmodel.py  todo_viewmodel.py
nudgly/viewmodels/: main_viewmodel.py
nudgly/views/: answer.qml  main.qml  main_window.qml
src/: Constants.h  Main.cpp  main.cpp
src/Models/: ConversationModel.cpp  ConversationModel.h
src/Services/: LLMService.cpp  LLMService.h  SettingsService.cpp  SettingsService.h  WindowPrivacyService.h  WindowPrivacyService.mm
src/ViewModels/: MainViewModel.cpp  MainViewModel.h
src/Views/: Answer.qml  Main.qml  Views.qrc
src/services/: window_privacy_service.h  window_privacy_service.mm
src/views/: main.qml  views.qrc
